<resources>
    <string name="app_name" translatable="false">My Spa</string>
    <string name="recommend_beauty_place" translatable="false">Recommend beauty place</string>
    <string name="agree_and_continue" translatable="false">AGREE AND CONTINUE</string>
    <string name="agree_term_of_service_and_policy" translatable="false">By get started to use this app,
        you agree to \nour <font color="#303030" textStyle="bold">Term of service</font> and <font color="#303030" textStyle="bold">Privacy Policy.</font></string>
    <string name="term_of_service" translatable="false">Term of service</string>
    <string name="privacy_policy" translatable="false">Privacy policy</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_pasword">Forgot your pasword ?</string>
    <string name="login_continue">Continue</string>
    <string name="enter_as_a_visitor">Enter as a visitor</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="i_have_agree_term_of_service_and_policy">I have read and agress to <font color="#303030" textStyle="bold">Term of service</font> and <font color="#303030" textStyle="bold"> Privacy Policy.</font></string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="personal">Personal</string>
    <string name="setting">Setting</string>
    <string name="general">General</string>
    <string name="share_app">Share app</string>
    <string name="rate_us">Rate us</string>
    <string name="contact_us">Contact Us</string>
    <string name="app_infor">App infor</string>
    <string name="share">Share</string>
    <string name="plase_enter_your_password">Please enter your password</string>
    <string name="plase_enter_your_password_old">Please enter your old password</string>
    <string name="plase_enter_your_mail">Please enter your email</string>
    <string name="incorrect_account_or_password">Incorrect account or password</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="plase_enter_your_phone_number">Please enter your phone number</string>
    <string name="plase_enter_your_name">Please enter your user name</string>
    <string name="plase_enter_your_confirm_pass">Please enter your user confirm password</string>
    <string name="confirm_password_is_incorrect">Confirm password is incorrect</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="user_name_has_been_exist">User name has been exist</string>
    <string name="email_address_has_been_exist">Email address has been exist</string>
    <string name="phone_number_has_been_exist">Phone number has been exist</string>
    <string name="user_name">User name</string>
    <string name="log_out">Log out</string>
    <string name="update_information" translatable="false">Update information</string>
    <string name="mobile_number_must_have_10_digits">Mobile number must have 10 digits</string>
    <string name="no_internet_title">No Internet</string>
    <string name="no_internet_des">" You’re offline. Please check your internet         connection an try again."</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="description">Description</string>
    <string name="business_hours">Business hours</string>
    <string name="see_detail">See detail</string>
    <string name="contact_partner">Contact Partner</string>
    <string name="select">Remind</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="determine_the_time">Determine the time</string>
    <string name="address_identification">Address identification</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="grant_permission">Please grant the application permission to continue using the app</string>
    <string name="goto_settings">You must approve this permission in Permissions in the app settings on your device to continue using the app.</string>
    <string name="settings">Settings</string>
    <string name="update_user">Update User</string>
    <string name="birthday">Birthday</string>
    <string name="update">Update</string>
    <string name="unknown">Unknown</string>
    <string name="all_images">All Image</string>
    <string name="empty">Empty</string>
    <string name="please_wait">Please wait...</string>
    <string name="image_error">Image error</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="plase_enter_your_first_name">Please enter your first name</string>
    <string name="there_s_nothing_here">There \'s nothing here.</string>
    <string name="search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_language">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="do_you_want_to_confirm_avatar_change">Do you want to confirm avatar change?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phone_admin">0987612345</string>
    <string name="admin_gmail">admin@gmail.com</string>
    <string name="admin_facebook">admin@facebook.com</string>
    <string name="infor">Infor</string>
    <string name="service">Service</string>
    <string name="comment">Comment</string>
    <string name="delete_success">Delete success!</string>
    <string name="error_please_try_again">Error.Please try again later</string>
    <string name="add_to_favorite">Add to favarite</string>
    <string name="compelete">Compelete!!</string>
    <string name="gender">Gender</string>
    <string name="add_comment">Add Comment</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="just_finished">just finished</string>
    <string name="days_ago">days ago</string>
    <string name="at">at</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
///
    <string name="app_name_lowercase">reminder</string>

    <string name="reminder_instance_key" translatable="false">Reminder Instance</string>
    <string name="reminder_worker_tag" translatable="false">ReminderTag</string>
    <string name="reminder_id" translatable="false">Reminder_ID</string>
    <string name="worker_tag" translatable="false">WORKER_TAG</string>
    <string name="ok_action" translatable="false">OK</string>
    <string name="complete_action" translatable="false">COMPLETE</string>
    <string name="done" translatable="false">Done</string>
    <string name="notification_channel_id" translatable="false">12345678</string>
    <string name="notification_channel_name" translatable="false">RemindMe</string>
    <string name="notification_channel_description" translatable="false">Default notification channel</string>
    <string name="address">Address :</string>
    <string name="select_time">Select time</string>
    <string name="select_day">Select day</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="error_image">Error.Upload image fail</string>
    <string name="cart">Cart</string>
    <string name="delete">Delete</string>
    <string name="sum_pay">Sum pay</string>
    <string name="buy">Buy</string>
    <string name="purchase_history">Purchase History</string>
    <string name="payment_time">Payment time:</string>
    <string name="invoice_information">Invoice information</string>
    <string name="view_shop">View shop</string>
    <string name="payment">Payment</string>
    <string name="total_amount">Total amount :</string>
    <string name="not_receive_info">No receive info</string>
    <string name="report">Report this address</string>
    <string name="report_success">Report success!</string>
    <string name="send">Send</string>
    <string name="success">Success</string>
    <string name="payment_successfull">Payment successfull</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="error_pro_payment">Error processing payment</string>
    <string name="search_filter">Search Filter</string>
    <string name="category">Category</string>
    <string name="apply">AppLy</string>
    <string name="close">Close</string>
    <string name="change_password">Change Password</string>
    <string name="enter_a_new_password_below_to_change_your_password">Enter a new password below to change your password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="buy_again">Buy Again</string>
    <string name="address_with">Address with signs of fraud!!</string>
    <string name="there_are_images">There are images, offensive content</string>
    <string name="wrong_info">Wrong information</string>

</resources>