<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llTitle"
                android:layout_width="match_parent"
                android:background="@color/accent_primary"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_20"
                    android:text="@string/change_language"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="@font/sf_pro_semibold"  />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioButtonEng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_back"
                    android:paddingLeft="@dimen/dp_16"
                    android:text="@string/english"/>
                <RadioButton
                    android:id="@+id/radioButtonVN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:textColor="@color/text_back"
                    android:paddingLeft="@dimen/dp_16"
                    android:text="@string/vietnamese"/>
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_12"
                android:background="@color/gray_light"/>
            <com.google.android.material.button.MaterialButton
               android:id="@+id/btnOke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:backgroundTint="@color/accent_primary"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_16"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</layout>