<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
            <variable
                name="item"
                type="com.phuong.myspa.data.api.model.shop.ShopService" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAvatarService"
            android:layout_width="match_parent"
            android:loadImageFromUrl="@{item.avatar}"
            android:layout_height="256dp"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_close_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{item.name}"
            android:layout_marginTop="@dimen/dp_24"
            app:layout_constraintTop_toBottomOf="@id/ivAvatarService"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:fontFamily="@font/sf_pro_semibold"
            android:textSize="24sp"
            android:textColor="@color/text_back"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/MediumBody1"
            android:text="@string/time"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toEndOf="@id/tvTitleTime"
            style="@style/MediumBody1"
            setTime="@{item.time}"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            app:layout_constraintTop_toBottomOf="@id/tvTime"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/description"
            style="@style/SemiBoldBody1"
            android:layout_marginStart="@dimen/dp_16"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/accent_primary"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titleDes"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            style="@style/RegularBody1"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@{item.description}"
            android:textColor="@color/text_back"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitlePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            style="@style/MediumBody1"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="@dimen/dp_16"
            android:textSize="@dimen/sp_18"
            android:text="@string/price"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            style="@style/MediumBody1"
            app:layout_constraintStart_toEndOf="@id/tvTitlePrice"
            android:paddingStart="@dimen/dp_16"
            android:textSize="@dimen/sp_18"
            setPrice="@{item.price}"
            />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="@dimen/dp_6"
        android:layout_marginHorizontal="@dimen/dp_12"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:backgroundTint="@color/md_red_500"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>